--- a/grid-index.html
+++ b/grid-index.html
@@ -10,55 +10,55 @@
 <body>
     <div class="grid-layout">
         <div class="section-1">
-            <img class="img" src="../img/img-1.jpg">
+            <img class="img" src="img/img-1.jpg">
             </div>
             <div class="section-2">
-                    <img class="img" src="../img/img-2.jpg">
+                    <img class="img" src="img/img-2.jpg">
                     </div>
                     <div class="section-3">
-                            <img class="img" src="../img/img-3.jpg">
+                            <img class="img" src="img/img-3.jpg">
                             </div>
                             <div class="section-4">
-                                    <img class="img" src="../img/img-4.jpg">
+                                    <img class="img" src="img/img-4.jpg">
                                     </div>
                                     <div class="section-3">
-                                            <img class="img" src="../img/img-5.jpg">
+                                            <img class="img" src="img/img-5.jpg">
                                             </div>
                                             <div class="section-1">
-                                                    <img class="img" src="../img/img-6.jpg">
+                                                    <img class="img" src="img/img-6.jpg">
                                                     </div>
                                                     <div class="section-2">
-                                                            <img class="img" src="../img/img-7.jpg">
+                                                            <img class="img" src="img/img-7.jpg">
                                                             </div>
                                                             <div class="section-1">
-                                                                    <img class="img" src="../img/img-8.jpg">
+                                                                    <img class="img" src="img/img-8.jpg">
                                                                     </div>
                                                                     <div class="section-1">
-                                                                            <img class="img" src="../img/img-9.jpg">
+                                                                            <img class="img" src="img/img-9.jpg">
                                                                             </div>
                                                                             <div class="section-1">
-                                                                                    <img class="img" src="../img/img-10.jpg">
+                                                                                    <img class="img" src="img/img-10.jpg">
                                                                                     </div>
                                                                                     <div class="section-2">
-                                                                                            <img class="img" src="../img/img-1.jpg">
+                                                                                            <img class="img" src="img/img-1.jpg">
                                                                                             </div>
                                                                                             <div class="section-2">
-                                                                                                    <img class="img" src="../img/img-2.jpg">
+                                                                                                    <img class="img" src="img/img-2.jpg">
                                                                                                     </div>
                                                                                                     <div class="section-2">
-                                                                                                            <img class="img" src="../img/img-3.jpg">
+                                                                                                            <img class="img" src="img/img-3.jpg">
                                                                                                             </div>
                                                                                                             <div class="section-1">
-                                                                                                                    <img class="img" src="../img/img-4.jpg">
+                                                                                                                    <img class="img" src="img/img-4.jpg">
                                                                                                                     </div>
                                                                                                                     <div class="section-2">
-                                                                                                                            <img class="img" src="../img/img-5.jpg">
+                                                                                                                            <img class="img" src="img/img-5.jpg">
                                                                                                                             </div>
                                                                                                                             <div class="section-3">
-                                                                                                                                    <img class="img" src="../img/img-6.jpg">
+                                                                                                                                    <img class="img" src="img/img-6.jpg">
                                                                                                                                     </div>
                                                                                                                                     <div class="section-2">
-                                                                                                                                            <img class="img" src="../img/img-7.jpg">
+                                                                                                                                            <img class="img" src="img/img-7.jpg">
                                                                                                                                             </div>
     
     </div>
