--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 <body>
     <div id='grid' data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 200 }'>
-    <div class="grid-item"><img class="img" src="../img/img-1.jpg"></div>
-    <div class="grid-item"><img class="img" src="../img/img-2.jpg"></div>
-    <div class="grid-item thumbnail"><img class="img" src="../img/img-3.jpg"></div>
-    <div class="grid-item medium"><img class="img" src="../img/img-4.jpg"></div>
-    <div class="grid-item"><img class="img" src="../img/img-5.jpg"></div>
-    <div class="grid-item large"><img class="img" src="../img/img-6.jpg"></div>
-    <div class="grid-item"><img class="img" src="../img/img-7.jpg"></div>
-    <div class="grid-item medium"><img class="img" src="../img/img-8.jpg"></div>
-    <div class="grid-item medium"><img class="img" src="../img/img-9.jpg"></div>
-    <div class="grid-item medium"><img class="img" src="../img/img-10.jpg"></div>
+    <div class="grid-item"><img class="img" src="img/img-1.jpg"></div>
+    <div class="grid-item"><img class="img" src="img/img-2.jpg"></div>
+    <div class="grid-item thumbnail"><img class="img" src="img/img-3.jpg"></div>
+    <div class="grid-item medium"><img class="img" src="img/img-4.jpg"></div>
+    <div class="grid-item"><img class="img" src="img/img-5.jpg"></div>
+    <div class="grid-item large"><img class="img" src="img/img-6.jpg"></div>
+    <div class="grid-item"><img class="img" src="img/img-7.jpg"></div>
+    <div class="grid-item medium"><img class="img" src="img/img-8.jpg"></div>
+    <div class="grid-item medium"><img class="img" src="img/img-9.jpg"></div>
+    <div class="grid-item medium"><img class="img" src="img/img-10.jpg"></div>
    </div> 
 
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
